--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -103,7 +103,7 @@
       <!--listas de propiedades Cascada-->
       <div *ngIf="enablelista">
         <ion-card *ngFor="let P of Propiedades">
-          <ion-accordion-group [multiple]="true" [value]="['first', 'third']">
+          
             <ion-accordion>
               <ion-item slot="header">
                 <ion-grid [fixed]="true">
@@ -145,7 +145,7 @@
                     </ion-button>
                   </div>
                   <div  *ngIf="P.estado == 'Activa'"  style="background: #8ea8b3; margin-bottom: 10px; padding: 10px; border-radius: 5px;">
-                    <ion-label class="bold_lbl">Contactos</ion-label>
+                    <ion-label class="bold_lbl">Cuentas</ion-label>
                     <ion-grid *ngFor="let c of filtroCuentaAgua(P.id)">
                       <ion-row>
                         <ion-col size="auto"><ion-icon name="water"></ion-icon></ion-col>
@@ -270,7 +270,7 @@
                 </ion-grid>
               </ion-item>
             </ion-accordion>
-          </ion-accordion-group>
+          
         </ion-card>
       </div>
 
