--- a/src/app/backend/soporte/soporte.component.html
+++ b/src/app/backend/soporte/soporte.component.html
@@ -1,6 +1,14 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Soporte</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+<ion-label>Soporte</ion-label>
+    <ion-buttons slot="end">
+      <ion-button (click)="goPerfil()">
+        <ion-icon slot="icon-only" name="person-circle"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
