--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -103,7 +103,7 @@
       <!--listas de propiedades Cascada-->
       <div *ngIf="enablelista">
         <ion-card *ngFor="let P of Propiedades">
-          
+          <ion-accordion-group [multiple]="true" [value]="['first', 'third']">
             <ion-accordion>
               <ion-item slot="header">
                 <ion-grid [fixed]="true">
@@ -145,12 +145,12 @@
                     </ion-button>
                   </div>
                   <div  *ngIf="P.estado == 'Activa'"  style="background: #8ea8b3; margin-bottom: 10px; padding: 10px; border-radius: 5px;">
-                    <ion-label class="bold_lbl">Cuentas</ion-label>
+                    <ion-label class="bold_lbl">Contactos</ion-label>
                     <ion-grid *ngFor="let c of filtroCuentaAgua(P.id)">
                       <ion-row>
                         <ion-col size="auto"><ion-icon name="water"></ion-icon></ion-col>
                         <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                        <ion-col size="auto"><ion-label>N° Ciente:</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>Numuero Ciente:</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       </ion-row>
                       <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
@@ -167,7 +167,7 @@
                       <ion-row>
                         <ion-col size="auto"><ion-icon name="flash"></ion-icon></ion-col>
                         <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                        <ion-col size="auto"><ion-label>N° Ciente:</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       </ion-row>
                       <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
@@ -184,7 +184,7 @@
                       <ion-row>
                         <ion-col size="auto"><ion-icon name="flame"></ion-icon></ion-col>
                         <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                        <ion-col size="auto"><ion-label>N° Ciente:</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       </ion-row>
                       <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
@@ -201,7 +201,7 @@
                       <ion-row>
                         <ion-col size="auto"><ion-icon name="globe"></ion-icon></ion-col>
                         <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                        <ion-col size="auto"><ion-label>N° Ciente:</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       </ion-row>
                       <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
@@ -218,7 +218,7 @@
                       <ion-row>
                         <ion-col size="auto"><ion-icon name="business-outline"></ion-icon></ion-col>
                         <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                        <ion-col size="auto"><ion-label>N° Ciente:</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       </ion-row>
                       <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
@@ -235,7 +235,7 @@
                       <ion-row>
                         <ion-col size="auto"><ion-icon name="newspaper-outline"></ion-icon></ion-col>
                         <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                        <ion-col size="auto"><ion-label>N° Ciente:</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       </ion-row>
                       <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
@@ -270,12 +270,9 @@
                 </ion-grid>
               </ion-item>
             </ion-accordion>
-          
+          </ion-accordion-group>
         </ion-card>
       </div>
-
-
-
     </ion-card>
   </div>
 </ion-content>
