--- a/src/app/backend/allcuentas/allcuentas.component.html
+++ b/src/app/backend/allcuentas/allcuentas.component.html
@@ -25,25 +25,58 @@
       <!--listas Cascada-->
         <ion-card-content style=" margin-bottom: 10px; border-radius: 5px;">
           <ion-label class="bold_lbl">Cuentas</ion-label>
-          <ion-grid  *ngFor="let c of cuentas" style="background:white;  margin-bottom: 10px; padding: 5px; border-radius: 5px;">
-            <ion-row>
-              <ion-col size="auto">
-                <ion-label class="bold_lbl">{{c.tipoCuenta}}</ion-label>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col size="auto">
-                <ion-label class="small_lbl">{{c.empresa}}</ion-label>
-              </ion-col>
-              <ion-col size="auto">
-                <ion-label class="small_lbl">CLIENTE: {{c.numCliente}}</ion-label>
-              </ion-col>
-            </ion-row>
-            <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
-              <ion-col size="auto"><ion-label class="small_lbl">N°: {{G.Num_documento}}</ion-label></ion-col>
+          <ion-item>
+            <ion-label>Filtrar por:</ion-label>
+            <ion-select interface="popover" #c (ionChange)="handleChange(c.value)">
+              <ion-select-option value="Todas">Todas</ion-select-option>
+              <ion-select-option value="Vencidas">Vencidas</ion-select-option>
+              <ion-select-option value="Vigentes">Vigentes</ion-select-option>
+              <ion-select-option value="Pagadas">Pagadas</ion-select-option>
+            </ion-select>
+          </ion-item>
+          <ion-grid *ngIf="enableTodas" style="background:white;  margin-bottom: 10px; padding: 5px; border-radius: 5px;">
+            <ion-row *ngFor="let G of gastos; index as i">
+              <ion-col size="auto"><ion-label class="small_lbl">{{i+1}}_ N°: {{G.Num_documento}}</ion-label></ion-col>
+              <ion-col size="auto"><ion-label class="small_lbl">{{G.Nombre_emisor}}</ion-label></ion-col>
+              <ion-col size="auto"><ion-label class="small_lbl">CLIENTE: {{G.Numero_cliente}}</ion-label></ion-col>
               <ion-col size="auto"><ion-label class="small_lbl">Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
-              <ion-col size="auto"><ion-label class="small_lbl">${{G.Total}}</ion-label></ion-col>
-              <ion-col size="auto">
+              <ion-col size="auto"><ion-label class="small_lbl">${{G.Total}} </ion-label>
+                <ion-label style="padding-left: 5px; color: black; padding-right: 5px; border-radius: 5px;"
+                  [ngStyle]="{'background':G.Estado === 'Vencida' ? '#f40716ba' :'#2dd36f'}">
+                  {{G.Estado}}</ion-label></ion-col>
+            </ion-row>
+          </ion-grid>
+          <ion-grid *ngIf="enableVencidas" style="background:white;  margin-bottom: 10px; padding: 5px; border-radius: 5px;">
+            <ion-row *ngFor="let G of filtroGastos2(); index as i">
+              <ion-col size="auto"><ion-label class="small_lbl">{{i+1}}_ N°: {{G.Num_documento}}</ion-label></ion-col>
+              <ion-col size="auto"><ion-label class="small_lbl">{{G.Nombre_emisor}}</ion-label></ion-col>
+              <ion-col size="auto"><ion-label class="small_lbl">CLIENTE: {{G.Numero_cliente}}</ion-label></ion-col>
+              <ion-col size="auto"><ion-label class="small_lbl">Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
+              <ion-col size="auto"><ion-label class="small_lbl">${{G.Total}} </ion-label>
+                <ion-label style="padding-left: 5px; color: black; padding-right: 5px; border-radius: 5px;"
+                  [ngStyle]="{'background':G.Estado === 'Vencida' ? '#f40716ba' :'#2dd36f'}">
+                  {{G.Estado}}</ion-label></ion-col>
+            </ion-row>
+          </ion-grid>
+          <ion-grid *ngIf="enablePagadas" style="background:white;  margin-bottom: 10px; padding: 5px; border-radius: 5px;">
+            <ion-row *ngFor="let G of filtroGasto1(); index as i">
+              <ion-col size="auto"><ion-label class="small_lbl">{{i+1}}_ N°: {{G.Num_documento}}</ion-label></ion-col>
+              <ion-col size="auto"><ion-label class="small_lbl">{{G.Nombre_emisor}}</ion-label></ion-col>
+              <ion-col size="auto"><ion-label class="small_lbl">CLIENTE: {{G.Numero_cliente}}</ion-label></ion-col>
+              <ion-col size="auto"><ion-label class="small_lbl">Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
+              <ion-col size="auto"><ion-label class="small_lbl">${{G.Total}} </ion-label>
+                <ion-label style="padding-left: 5px; color: black; padding-right: 5px; border-radius: 5px;"
+                  [ngStyle]="{'background':G.Estado === 'Vencida' ? '#f40716ba' :'#2dd36f'}">
+                  {{G.Estado}}</ion-label></ion-col>
+            </ion-row>
+          </ion-grid>
+          <ion-grid *ngIf="enableVigentes" style="background:white;  margin-bottom: 10px; padding: 5px; border-radius: 5px;">
+            <ion-row *ngFor="let G of filtroGasto(); index as i">
+              <ion-col size="auto"><ion-label class="small_lbl">{{i+1}}_ N°: {{G.Num_documento}}</ion-label></ion-col>
+              <ion-col size="auto"><ion-label class="small_lbl">{{G.Nombre_emisor}}</ion-label></ion-col>
+              <ion-col size="auto"><ion-label class="small_lbl">CLIENTE: {{G.Numero_cliente}}</ion-label></ion-col>
+              <ion-col size="auto"><ion-label class="small_lbl">Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
+              <ion-col size="auto"><ion-label class="small_lbl">${{G.Total}} </ion-label>
                 <ion-label style="padding-left: 5px; color: black; padding-right: 5px; border-radius: 5px;"
                   [ngStyle]="{'background':G.Estado === 'Vencida' ? '#f40716ba' :'#2dd36f'}">
                   {{G.Estado}}</ion-label></ion-col>
