--- a/src/app/backend/allcuentas/allcuentas.component.html
+++ b/src/app/backend/allcuentas/allcuentas.component.html
@@ -34,54 +34,128 @@
               <ion-select-option value="Pagadas">Pagadas</ion-select-option>
             </ion-select>
           </ion-item>
-          <ion-grid *ngIf="enableTodas" style="background:white;  margin-bottom: 10px; padding: 5px; border-radius: 5px;">
-            <ion-row *ngFor="let G of gastos; index as i">
-              <ion-col size="auto"><ion-label class="small_lbl">{{i+1}}_ N°: {{G.Num_documento}}</ion-label></ion-col>
+       
+
+
+          <ion-card *ngIf="enableTodas" >
+            <ion-accordion-group  [multiple]="true" [value]="['first', 'third']">
+              <ion-accordion *ngFor="let G of gastos; index as i">
+                <ion-item slot="header" >
+                  <ion-grid  >
+                    <ion-row >
+                      <ion-col size="auto"><ion-label class="small_lbl">{{i+1}}</ion-label></ion-col>
+                      <ion-col size="auto"><ion-label class="small_lbl">N°: {{G.Num_documento}}</ion-label></ion-col>
+                      <ion-col size="auto"><ion-label class="small_lbl">Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
+                      <ion-col size="auto"><ion-label class="small_lbl">${{G.Total}} </ion-label></ion-col>
+                      <ion-col size="auto"><ion-label style="padding-left: 5px; color: black; padding-right: 5px; border-radius: 5px;"
+                          [ngStyle]="{'background':G.Estado === 'Vencida' ? '#f40716ba' :'#2dd36f'}">
+                          {{G.Estado}}</ion-label></ion-col>
+                    </ion-row>
+                  </ion-grid>
+                </ion-item>
+            <ion-item slot="content">
+              <ion-grid >
+                <ion-row >
+                  <ion-col size="auto"><ion-label class="small_lbl">{{G.Nombre_emisor}}</ion-label></ion-col>
+                  <ion-col size="auto"><ion-label class="small_lbl">CLIENTE: {{G.Numero_cliente}}</ion-label></ion-col>
+                  <ion-col size="auto"><ion-label class="small_lbl">Emision: {{G.fecha_emision}}</ion-label></ion-col>
+                </ion-row>
+              </ion-grid>
+            </ion-item>
+            </ion-accordion>
+          </ion-accordion-group>
+        </ion-card>
+
+        <ion-card *ngIf="enableVencidas" >
+          <ion-accordion-group  [multiple]="true" [value]="['first', 'third']">
+            <ion-accordion *ngFor="let G of filtroGastos2(); index as i">
+              <ion-item slot="header" >
+                <ion-grid  >
+                  <ion-row >
+                    <ion-col size="auto"><ion-label class="small_lbl">{{i+1}}</ion-label></ion-col>
+                    <ion-col size="auto"><ion-label class="small_lbl">N°: {{G.Num_documento}}</ion-label></ion-col>
+                    <ion-col size="auto"><ion-label class="small_lbl">Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
+                    <ion-col size="auto"><ion-label class="small_lbl">${{G.Total}} </ion-label></ion-col>
+                    <ion-col size="auto"><ion-label style="padding-left: 5px; color: black; padding-right: 5px; border-radius: 5px;"
+                        [ngStyle]="{'background':G.Estado === 'Vencida' ? '#f40716ba' :'#2dd36f'}">
+                        {{G.Estado}}</ion-label></ion-col>
+                  </ion-row>
+                </ion-grid>
+              </ion-item>
+          <ion-item slot="content">
+            <ion-grid >
+              <ion-row >
+                <ion-col size="auto"><ion-label class="small_lbl">{{G.Nombre_emisor}}</ion-label></ion-col>
+                <ion-col size="auto"><ion-label class="small_lbl">CLIENTE: {{G.Numero_cliente}}</ion-label></ion-col>
+                <ion-col size="auto"><ion-label class="small_lbl">Emision: {{G.fecha_emision}}</ion-label></ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-item>
+          </ion-accordion>
+        </ion-accordion-group>
+      </ion-card>
+
+      <ion-card *ngIf="enableVigentes" >
+        <ion-accordion-group  [multiple]="true" [value]="['first', 'third']">
+          <ion-accordion *ngFor="let G of filtroGasto(); index as i">
+            <ion-item slot="header" >
+              <ion-grid  >
+                <ion-row >
+                  <ion-col size="auto"><ion-label class="small_lbl">{{i+1}}</ion-label></ion-col>
+                  <ion-col size="auto"><ion-label class="small_lbl">N°: {{G.Num_documento}}</ion-label></ion-col>
+                  <ion-col size="auto"><ion-label class="small_lbl">Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
+                  <ion-col size="auto"><ion-label class="small_lbl">${{G.Total}} </ion-label></ion-col>
+                  <ion-col size="auto"><ion-label style="padding-left: 5px; color: black; padding-right: 5px; border-radius: 5px;"
+                      [ngStyle]="{'background':G.Estado === 'Vencida' ? '#f40716ba' :'#2dd36f'}">
+                      {{G.Estado}}</ion-label></ion-col>
+                </ion-row>
+              </ion-grid>
+            </ion-item>
+        <ion-item slot="content">
+          <ion-grid >
+            <ion-row >
               <ion-col size="auto"><ion-label class="small_lbl">{{G.Nombre_emisor}}</ion-label></ion-col>
               <ion-col size="auto"><ion-label class="small_lbl">CLIENTE: {{G.Numero_cliente}}</ion-label></ion-col>
-              <ion-col size="auto"><ion-label class="small_lbl">Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
-              <ion-col size="auto"><ion-label class="small_lbl">${{G.Total}} </ion-label>
-                <ion-label style="padding-left: 5px; color: black; padding-right: 5px; border-radius: 5px;"
-                  [ngStyle]="{'background':G.Estado === 'Vencida' ? '#f40716ba' :'#2dd36f'}">
-                  {{G.Estado}}</ion-label></ion-col>
+              <ion-col size="auto"><ion-label class="small_lbl">Emision: {{G.fecha_emision}}</ion-label></ion-col>
             </ion-row>
           </ion-grid>
-          <ion-grid *ngIf="enableVencidas" style="background:white;  margin-bottom: 10px; padding: 5px; border-radius: 5px;">
-            <ion-row *ngFor="let G of filtroGastos2(); index as i">
-              <ion-col size="auto"><ion-label class="small_lbl">{{i+1}}_ N°: {{G.Num_documento}}</ion-label></ion-col>
-              <ion-col size="auto"><ion-label class="small_lbl">{{G.Nombre_emisor}}</ion-label></ion-col>
-              <ion-col size="auto"><ion-label class="small_lbl">CLIENTE: {{G.Numero_cliente}}</ion-label></ion-col>
-              <ion-col size="auto"><ion-label class="small_lbl">Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
-              <ion-col size="auto"><ion-label class="small_lbl">${{G.Total}} </ion-label>
-                <ion-label style="padding-left: 5px; color: black; padding-right: 5px; border-radius: 5px;"
-                  [ngStyle]="{'background':G.Estado === 'Vencida' ? '#f40716ba' :'#2dd36f'}">
-                  {{G.Estado}}</ion-label></ion-col>
-            </ion-row>
-          </ion-grid>
-          <ion-grid *ngIf="enablePagadas" style="background:white;  margin-bottom: 10px; padding: 5px; border-radius: 5px;">
-            <ion-row *ngFor="let G of filtroGasto1(); index as i">
-              <ion-col size="auto"><ion-label class="small_lbl">{{i+1}}_ N°: {{G.Num_documento}}</ion-label></ion-col>
-              <ion-col size="auto"><ion-label class="small_lbl">{{G.Nombre_emisor}}</ion-label></ion-col>
-              <ion-col size="auto"><ion-label class="small_lbl">CLIENTE: {{G.Numero_cliente}}</ion-label></ion-col>
-              <ion-col size="auto"><ion-label class="small_lbl">Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
-              <ion-col size="auto"><ion-label class="small_lbl">${{G.Total}} </ion-label>
-                <ion-label style="padding-left: 5px; color: black; padding-right: 5px; border-radius: 5px;"
-                  [ngStyle]="{'background':G.Estado === 'Vencida' ? '#f40716ba' :'#2dd36f'}">
-                  {{G.Estado}}</ion-label></ion-col>
-            </ion-row>
-          </ion-grid>
-          <ion-grid *ngIf="enableVigentes" style="background:white;  margin-bottom: 10px; padding: 5px; border-radius: 5px;">
-            <ion-row *ngFor="let G of filtroGasto(); index as i">
-              <ion-col size="auto"><ion-label class="small_lbl">{{i+1}}_ N°: {{G.Num_documento}}</ion-label></ion-col>
-              <ion-col size="auto"><ion-label class="small_lbl">{{G.Nombre_emisor}}</ion-label></ion-col>
-              <ion-col size="auto"><ion-label class="small_lbl">CLIENTE: {{G.Numero_cliente}}</ion-label></ion-col>
-              <ion-col size="auto"><ion-label class="small_lbl">Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
-              <ion-col size="auto"><ion-label class="small_lbl">${{G.Total}} </ion-label>
-                <ion-label style="padding-left: 5px; color: black; padding-right: 5px; border-radius: 5px;"
-                  [ngStyle]="{'background':G.Estado === 'Vencida' ? '#f40716ba' :'#2dd36f'}">
-                  {{G.Estado}}</ion-label></ion-col>
-            </ion-row>
-          </ion-grid>
+        </ion-item>
+        </ion-accordion>
+      </ion-accordion-group>
+    </ion-card>
+
+    <ion-card *ngIf="enablePagadas" >
+      <ion-accordion-group  [multiple]="true" [value]="['first', 'third']">
+        <ion-accordion *ngFor="let G of filtroGasto1(); index as i">
+          <ion-item slot="header" >
+            <ion-grid  >
+              <ion-row >
+                <ion-col size="auto"><ion-label class="small_lbl">{{i+1}}</ion-label></ion-col>
+                <ion-col size="auto"><ion-label class="small_lbl">N°: {{G.Num_documento}}</ion-label></ion-col>
+                <ion-col size="auto"><ion-label class="small_lbl">Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
+                <ion-col size="auto"><ion-label class="small_lbl">${{G.Total}} </ion-label></ion-col>
+                <ion-col size="auto"><ion-label style="padding-left: 5px; color: black; padding-right: 5px; border-radius: 5px;"
+                    [ngStyle]="{'background':G.Estado === 'Vencida' ? '#f40716ba' :'#2dd36f'}">
+                    {{G.Estado}}</ion-label></ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-item>
+      <ion-item slot="content">
+        <ion-grid >
+          <ion-row >
+            <ion-col size="auto"><ion-label class="small_lbl">{{G.Nombre_emisor}}</ion-label></ion-col>
+            <ion-col size="auto"><ion-label class="small_lbl">CLIENTE: {{G.Numero_cliente}}</ion-label></ion-col>
+            <ion-col size="auto"><ion-label class="small_lbl">Emision: {{G.fecha_emision}}</ion-label></ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+      </ion-accordion>
+    </ion-accordion-group>
+  </ion-card>
+
+            
+          
+       
         </ion-card-content>
     </ion-card>
   </div>
